Fix spacing of headlines

--- a/less/layouts.less
+++ b/less/layouts.less
@@ -32,7 +32,8 @@ header {
   h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
     color: @bright;
-    margin-bottom: 5px;
+    margin: 1em 0;
+    line-height: 1;
   }
   .meta {
     font-size: 14px;
